syntax = "proto3";

option java_package = "accounts.grpc.user.protobuff";

// The greeting service definition.
service User{
  rpc getUsers(Empty) returns (UserList);
  rpc addUser(AddUserDto) returns (Empty);
  rpc deleteUser(DeleteUserDto) returns (Empty);
}

message UserData {
    string family_name = 1;
    string surname = 2;
    string address = 3;
    string phone_number = 4;
}

message DeleteUserDto {
    int64 user_id = 1;
}

message AddUserDto {
   UserData userData = 1;
}

message UserList {
    repeated UserReadDto userReadData = 1 ;
}

message UserReadDto {
    int64 id = 1;
    UserData userData = 2;
    repeated AccountReadDto account_data = 3;
}



message AccountReadDto {
    int64 account_id = 1;
    int32 account_status = 2;
    int64 account_amount = 3;
    string currency = 4;
}

message Empty{
}